--- a/guides/get-started/introduction.mdx
+++ b/guides/get-started/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation Saeed 2"
+description: "Welcome to the home of your new documentation"
 ---
 
 <img
@@ -13,6 +13,7 @@ description: "Welcome to the home of your new documentation Saeed 2"
   src="/images/hero-dark.png"
   alt="Hero Dark"
 />
+
 
 ## Setting up
 
