Add sample blog post

--- a/blog/2025/post1.mdx
+++ b/blog/2025/post1.mdx
@@ -1,7 +1,52 @@
 ---
-title: 'Development'
-description: 'Preview changes locally to update your docs'
+title: 'Work in progress'
+description: 'This is a sample blog post description'
+date: '2025-01-01'
+tags: ['docs', 'cli']
+author: 'Sam Smith'
 ---
+
+<div class="flex flex-row gap-4">
+  <div class="group">
+    <a
+      target="_blank"
+      class="no-underline"
+      href="https://twitter.com/Sam115200"
+    >
+      <div class="flex items-center space-x-3 text-sm">
+        <div class="flex items-center justify-center w-10 h-10">
+          <img
+            alt="Sam Smith"
+            width="42"
+            height="42"
+            class="relative rounded-full bg-white"
+            src="/images/sam.webp"
+          />
+        </div>
+        <div class="flex-1 text-left leading-tight group-hover:text-gray-500">
+          <p class="font-medium m-0">Sam Smith</p>
+          <p class="text-sm font-normal text-gray-500 m-0">@Sam115200</p>
+        </div>
+      </div>
+    </a>
+  </div>
+  <div class="flex flex-row gap-4 items-center">
+    <p class="text-sm text-gray-500 m-0">•</p>
+    <p class="text-sm text-gray-500 m-0">Published on August 12, 2024</p>
+  </div>
+</div>
+
+
+<img
+  className="block dark:hidden"
+  src="/images/hero-light.png"
+  alt="Hero Light"
+/>
+<img
+  className="hidden dark:block"
+  src="/images/hero-dark.png"
+  alt="Hero Dark"
+/>
 
 <Info>
   **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding. <br />
@@ -76,12 +121,6 @@ mintlify broken-links
   Unlimited editors available under the [Pro
   Plan](https://mintlify.com/pricing) and above.
 </Tip>
-
-If the deployment is successful, you should see the following:
-
-<Frame>
-  <img src="/images/checks-passed.png" style={{ borderRadius: '0.5rem' }} />
-</Frame>
 
 ## Code Formatting
 
