Add an installation page in introduction fixes #4

--- a/guides/get-started/introduction.mdx
+++ b/guides/get-started/introduction.mdx
@@ -17,42 +17,45 @@ Take control of your checkout experience by conditionally showing, hiding, renam
 
 Whether you're looking to streamline your checkout, reduce errors, or improve customer satisfaction, BeSure helps you configure it with ease.
 
-## Getting Started
+## Getting started
 Get started with BeSure Checkout Rules in just a few simple steps. The steps below will guide you through installing the app, creating rules, and seeing them in action at checkout.
 
 <CardGroup cols={2}>
   <Card
-    title="Install the App"
+    title="Install the app"
     icon="download"
-    href="https://apps.shopify.com/checkout-rules"
+    href="/guides/get-started/installation#install-app"
   >
     Add BeSure Checkout Rules to your Shopify store from the App Store.
   </Card>
   <Card
-    title="Open App in Admin"
+    title="Open app in admin"
     icon="gear"
+    href="/guides/get-started/installation#go-to-the-app"
   >
     Access the app from your Shopify admin to begin configuring your checkout logic.
   </Card>
   <Card
-    title="Create Your Rules"
+    title="Create your rules"
     icon="sliders"
+    href="/guides/get-started/quickstart"
   >
   Create rules based on cart, customer, and shipping details.
   </Card>
   <Card
-    title="See It in Action"
+    title="See it in action"
     icon="eye"
+    href="/guides/get-started/quickstart#test-the-rule"
   >
     Your rules are automatically applied at checkout.
   </Card>
 </CardGroup>
 
-## Why Use BeSure Checkout Rules?
+## Why use BeSure Checkout Rules?
 
 BeSure Checkout Rules helps Shopify merchants create a smoother, smarter checkout process by applying flexible conditions to shipping and payment methods. It allows you to tailor the experience to your store’s needs, ensuring customers see only the most relevant options while reducing friction and errors.
 
-**Key Benefits**
+**Key benefits**
 
 - **Improve customer experience** by showing only relevant shipping and payment methods based on cart or customer conditions.
 
