--- a/guides/get-started/quickstart.mdx
+++ b/guides/get-started/quickstart.mdx
@@ -8,67 +8,67 @@ icon: 'rocket'
 To create a rule, navigate to _BSure Checkout Rules → Rules → click "Create Rule"_.
 
 <img
-  src="/images/quickstart/create-checkout-rule.png"
+  src="/images/quickstart/create-checkout-rule.webp"
   alt="Create Checkout Rule"
 />
 
 You’ll then be redirected to the **Select checkout rule type** screen. Choose a category (Shipping, Payment, Validation, or Discount) → select a checkout rule type (e.g., Reorder Shipping Methods) → click “Select Rule”.
 
 <img
-  src="/images/quickstart/create-checkout-rule-2.png"
+  src="/images/quickstart/create-checkout-rule-2.webp"
   alt="Create Checkout Rule 2"
 />
 Then, a **template selection** popup will appear. Choose an option based on your requirements.
 <img
-  src="/images/quickstart/select-rule-template.png"
+  src="/images/quickstart/select-rule-template.webp"
   alt="Select Rule Template"
 />
 
 Next, you’ll land on the **Create Reorder Shipping Methods Rule** screen, where you can configure your rule.
 
-### Rule Configuration
+### Rule configuration
 To configure the rule, first add a name such as "Reorder Shipping Methods" to describe what it does. Then, select the status: Testing, Active, or Deactivated. 
 
 Here we are going to choose **Testing** status, so we can quickly test the rule without affecting the checkout for actual customers.
 <img
-  src="/images/quickstart/rule-configure-1.png"
+  src="/images/quickstart/rule-configure-1.webp"
   alt="Rule Configure 1"
 />
 
 Next, on the same screen, select the relevant condition set, condition, and operation. As an example here we are going to choose the default condition set, then set the rule to always run, and select the operation to reorder the shipping methods from shipping prices highest to lowest.
 
 <img
-  src="/images/quickstart/rule-configure-2.png"
+  src="/images/quickstart/rule-configure-2.webp"
   alt="Rule Configure 2"
 />
 Finally, click the Save button at the top to configure and create your rule.
 <img
-  src="/images/quickstart/save-rule.png"
+  src="/images/quickstart/save-rule.webp"
   alt="Rule Save"
 />
 
-## Test the Rule
+## Test the rule
 Since, the rule is set to testing status, we use `test@testing.com` as the email to test the rule at checkout.
 
 <img
-  src="/images/quickstart/before-rule-apply.png"
+  src="/images/quickstart/before-rule-apply.webp"
   alt="Before Rule Apply"
 />
 
 After setting the email, you'll see the shipping methods reordered.
 <img
-  src="/images/quickstart/after-rule-apply.png"
+  src="/images/quickstart/after-rule-apply.webp"
   alt="After Rule Apply"
 />
 
-## Activate the Rule
+## Activate the rule
 Click on **Rules** in the sidebar to view all rules. Select the rule you want to activate, then click the **Activate** button to activate it.
 <Warning>
 Rule activation is only available on paid plans.
 If you haven't upgraded your plan yet, follow the instructions [here](/guides/get-started/installation#upgrade-your-plan) to upgrade.
 </Warning>
 <img
-  src="/images/quickstart/activate-the-rule.png"
+  src="/images/quickstart/activate-the-rule.webp"
   alt="Activate The Rule"
 />
 
