Update introduction and quickstart pages fixes #2

--- a/guides/get-started/introduction.mdx
+++ b/guides/get-started/introduction.mdx
@@ -1,72 +1,67 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: "Welcome to the BeSure Checkout Rules documentation, your guide to customizing the Shopify checkout experience."
+icon: 'book-open'
 ---
+<video
+  controls
+  className="w-full aspect-video rounded-xl"
+  src="/videos/BeSure-Introduction.mp4"
+></video>
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+## Overview
 
+BeSure Checkout Rules helps you customize and control your Shopify checkout without writing a single line of code.
 
-## Setting up
+Take control of your checkout experience by conditionally showing, hiding, renaming, or reordering shipping and payment methods based on cart total, weight, address, items, customer or product tags, and more. You can set default options, block invalid checkouts, hide express payment buttons, move store pickup to the bottom, restrict PO Box shipping, apply discounts to specific orders or shipping methods, and much more using simple rules and conditions.
 
-The first step to world-class documentation is setting up your editing environments.
+Whether you're looking to streamline your checkout, reduce errors, or improve customer satisfaction, BeSure helps you configure it with ease.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+## Getting Started
+Get started with BeSure Checkout Rules in just a few simple steps. The steps below will guide you through installing the app, creating rules, and seeing them in action at checkout.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Install the App"
+    icon="download"
+    href="https://apps.shopify.com/checkout-rules"
   >
-    Customize your docs to your company's colors and brands
+    Add BeSure Checkout Rules to your Shopify store from the App Store.
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Open App in Admin"
+    icon="gear"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Access the app from your Shopify admin to begin configuring your checkout logic.
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
+    title="Create Your Rules"
+    icon="sliders"
   >
-    Build interactive features and designs to guide your users
+  Create rules based on cart, customer, and shipping details.
   </Card>
   <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
+    title="See It in Action"
+    icon="eye"
   >
-    Check out our showcase of our favorite documentation
+    Your rules are automatically applied at checkout.
   </Card>
 </CardGroup>
+
+## Why Use BeSure Checkout Rules?
+
+BeSure Checkout Rules helps Shopify merchants create a smoother, smarter checkout process by applying flexible conditions to shipping and payment methods. It allows you to tailor the experience to your store’s needs, ensuring customers see only the most relevant options while reducing friction and errors.
+
+**Key Benefits**
+
+- **Improve customer experience** by showing only relevant shipping and payment methods based on cart or customer conditions.
+
+- **Reduce errors and block high-risk checkouts**, such as orders with PO box addresses or unsupported payment methods like COD.
+
+- **Increase conversion rates** by setting default selections and simplifying the checkout flow for customers.
+
+- **Enhance operational efficiency** by hiding unnecessary express buttons or reordering options to match your business logic.
+
+- **Enforce business rules** such as restricting shipping methods for certain products, addresses, or order values.
+
+- **Apply discounts** to specific orders or shipping methods based on conditions like cart value, tags, or shipping zones.
