--- a/guides/get-started/quickstart.mdx
+++ b/guides/get-started/quickstart.mdx
@@ -1,97 +1,76 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'This quickstart will guide you through creating a sample rule, demonstrating how it works, and how it can be used to customize your Shopify checkout.'
+icon: 'rocket'
 ---
 
-## Setup your development
+## Create a sample rule
+To create a rule, navigate to _BSure Checkout Rules → Rules → click "Create Rule"_.
 
-Learn how to update your docs locally and deploy them to the public.
+<img
+  src="/images/quickstart/create-checkout-rule.png"
+  alt="Create Checkout Rule"
+/>
 
-### Edit and preview
+You’ll then be redirected to the **Select checkout rule type** screen. Choose a category (Shipping, Payment, Validation, or Discount) → select a checkout rule type (e.g., Reorder Shipping Methods) → click “Select Rule”.
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
+<img
+  src="/images/quickstart/create-checkout-rule-2.png"
+  alt="Create Checkout Rule 2"
+/>
+Then, a **template selection** popup will appear. Choose an option based on your requirements.
+<img
+  src="/images/quickstart/select-rule-template.png"
+  alt="Select Rule Template"
+/>
+
+Next, you’ll land on the **Create Reorder Shipping Methods Rule** screen, where you can configure your rule.
+
+### Rule Configuration
+To configure the rule, first add a name such as "Reorder Shipping Methods" to describe what it does. Then, select the status: Testing, Active, or Deactivated. 
+
+Here we are going to choose **Testing** status, so we can quickly test the rule without affecting the checkout for actual customers.
+<img
+  src="/images/quickstart/rule-configure-1.png"
+  alt="Rule Configure 1"
+/>
+
+Next, on the same screen, select the relevant condition set, condition, and operation. As an example here we are going to choose the default condition set, then set the rule to always run, and select the operation to reorder the shipping methods from shipping prices highest to lowest.
+
+<img
+  src="/images/quickstart/rule-configure-2.png"
+  alt="Rule Configure 2"
+/>
+Finally, click the Save button at the top to configure and create your rule.
+<img
+  src="/images/quickstart/save-rule.png"
+  alt="Rule Save"
+/>
+
+## Test the Rule
+Since, the rule is set to testing status, we use `test@testing.com` as the email to test the rule at checkout.
+
+<img
+  src="/images/quickstart/before-rule-apply.png"
+  alt="Before Rule Apply"
+/>
+
+After setting the email, you'll see the shipping methods reordered.
+<img
+  src="/images/quickstart/after-rule-apply.png"
+  alt="After Rule Apply"
+/>
+
+## Activate the Rule
+Click on **Rules** in the sidebar to view all rules. Select the rule you want to activate, then click the **Activate** button to activate it.
+<Warning>
+Rule activation is only available on paid plans.
+If you haven't upgraded your plan yet, follow the instructions [here](/guides/get-started/installation#upgrade-your-plan) to upgrade.
+</Warning>
+<img
+  src="/images/quickstart/activate-the-rule.png"
+  alt="Activate The Rule"
+/>
 
 
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
-
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
-  </Accordion>
-</AccordionGroup>
-
-### Deploy your changes
-
-<AccordionGroup>
-
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
-
-</AccordionGroup>
-
-## Update your docs
-
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
-
-<CardGroup>
-
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
-
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
-
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
-
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
-
-</CardGroup>
+Similarly, you can create multiple rules based on your requirements by following the process described above.
