Add a concepts page in get started fixes #3

--- a/guides/get-started/quickstart.mdx
+++ b/guides/get-started/quickstart.mdx
@@ -12,13 +12,13 @@ To create a rule, navigate to _BSure Checkout Rules → Rules → click "Create 
   alt="Create Checkout Rule"
 />
 
-You’ll then be redirected to the **Select checkout rule type** screen. Choose a category (Shipping, Payment, Validation, or Discount) → select a checkout rule type (e.g., Reorder Shipping Methods) → click “Select Rule”.
+You’ll then be redirected to the **Select checkout rule type** screen. Choose a category (Shipping, Payment, Validation, or Discount) → select a checkout rule type (e.g., Reorder Shipping Methods) → click “Select Rule”. Here we are selecting *Reorder Shipping Methods* as the checkout rule type for demo purpose.
 
 <img
   src="/images/quickstart/create-checkout-rule-2.webp"
   alt="Create Checkout Rule 2"
 />
-Then, a **template selection** popup will appear. Choose an option based on your requirements.
+Then, a **template selection** popup will appear. Choose an option based on your requirements. In most cases, you can choose the empty rule as a starting point and modify it to your needs. Even if you choose a prefilled template, you will be able to modify it later.
 <img
   src="/images/quickstart/select-rule-template.webp"
   alt="Select Rule Template"
@@ -27,7 +27,7 @@ Then, a **template selection** popup will appear. Choose an option based on your
 Next, you’ll land on the **Create Reorder Shipping Methods Rule** screen, where you can configure your rule.
 
 ### Rule configuration
-To configure the rule, first add a name such as "Reorder Shipping Methods" to describe what it does. Then, select the status: Testing, Active, or Deactivated. 
+To configure the rule, first optionally we can add a name such as "Reorder Shipping Methods" to describe what it does. Then, select the status: Testing, Active, or Deactivated. 
 
 Here we are going to choose **Testing** status, so we can quickly test the rule without affecting the checkout for actual customers.
 <img
@@ -48,21 +48,24 @@ Finally, click the Save button at the top to configure and create your rule.
 />
 
 ## Test the rule
-Since, the rule is set to testing status, we use `test@testing.com` as the email to test the rule at checkout.
+Since, the rule is set to testing status, we have to use `test@testing.com` as the email, instead of the actual email, to run the rule at checkout. Let's make this change.
 
 <img
   src="/images/quickstart/before-rule-apply.webp"
   alt="Before Rule Apply"
 />
 
-After setting the email, you'll see the shipping methods reordered.
+After setting the email, the checkout rule runs and you'll see the shipping methods are reordered. We can verify the most expensive shipping method is now at the top, as shown below.
 <img
   src="/images/quickstart/after-rule-apply.webp"
   alt="After Rule Apply"
 />
 
 ## Activate the rule
+Once testing is done, we can activate the rule, so it can start making changes to the checkout for actual customers. Only activated rules can make changes to the checkout for all customers.
+
 Click on **Rules** in the sidebar to view all rules. Select the rule you want to activate, then click the **Activate** button to activate it.
+
 <Warning>
 Rule activation is only available on paid plans.
 If you haven't upgraded your plan yet, follow the instructions [here](/guides/get-started/installation#upgrade-your-plan) to upgrade.
