Add advanced section fixes #13

--- a/guides/essentials/condition-sets/condition-set-1.mdx
+++ b/guides/essentials/condition-sets/condition-set-1.mdx
@@ -27,54 +27,56 @@ When all previous conditions are invalid in the previous [rule block](/guides/ge
 
 When setting up any **Date Time** condition, additional setup is required. Follow these steps to complete it.
 
-1. **Choose your time zone**  
-    From the **Please choose your time zone** dropdown, select your store’s time zone, then click **"Save"** to apply it.
+<Steps>
+  <Step title="Choose your time zone">
+    From the <strong>Please choose your time zone</strong> dropdown, select your store’s time zone, then click <strong>"Save"</strong> to apply it.
+    
+    > For example, select <strong>Vancouver</strong> if you want Pacific Time (PT).
 
-   > For example, select **Vancouver** if you want Pacific Time (PT).
+    <img
+      src="/images/essentials/condition-sets/select-timezone.webp"
+      alt="Select Timezone"
+    />
+  </Step>
 
-   <img
-     src="/images/essentials/condition-sets/select-timezone.webp"
-     alt="Select Timezone"
-   />
+  <Step title="Enable the BeSure Embed Block in your theme">
+    - Click on the <strong>BeSure Embed Block</strong> link to enable the block in your theme.
+    
+    <img
+      src="/images/essentials/condition-sets/click-on-BeSure-Embed-Block.webp"
+      alt="Click On BeSure Embed Block"
+    />
 
-2. **Enable the BeSure Embed Block in your theme**
+    - In the theme editor, locate the <strong>BeSure Embed Block</strong> under <em>App embeds</em> and enable it.
+    
+    <img
+      src="/images/essentials/condition-sets/locate-and-enable-block.webp"
+      alt="Locate And Enable Block"
+    />
+  </Step>
 
-   - Click on the **BeSure Embed Block** link to enable block on you theme.
+  <Step title="Save your theme">
+    After enabling the block, please save your theme. The <strong>Save</strong> button is located in the top-right corner.
+    
+    <img
+      src="/images/essentials/condition-sets/save-theme.webp"
+      alt="Save Theme"
+    />
+  </Step>
 
-   {" "}
+  <Step title="Mark as done (Optional)">
+    Click <strong>"Mark as done"</strong> when all steps are completed, then save the rule.
+    
+    <img
+      src="/images/essentials/condition-sets/mark-as-done.webp"
+      alt="Mark As Done"
+    />
+  </Step>
 
-   <img
-     src="/images/essentials/condition-sets/click-on-BeSure-Embed-Block.webp"
-     alt="Click On BeSure Embed Block"
-   />
-
-   - In the theme editor, locate the **BeSure Embed Block** in _App embeds_ and enable it.
-
-   {" "}
-
-   <img
-     src="/images/essentials/condition-sets/locate-and-enable-block.webp"
-     alt="Locate And Enable Block"
-   />
-
-3. **Save your theme**  
-   After enabling the block, please save your theme.The **Save** button is located in the top-right corner.
-
-   <img
-     src="/images/essentials/condition-sets/save-theme.webp"
-     alt="Save Theme"
-   />
-
-4. **Click "Mark as done" (Optional)**  
-   Click **"Mark as done"** when all steps are completed and then save the rule.
-
-   <img
-     src="/images/essentials/condition-sets/mark-as-done.webp"
-     alt="Mark As Done"
-   />
-
-5. **Test your rule**  
-   Now, after creating the rule, empty your cart first. Then, add a new product in cart and proceed to checkout to test if the rule is working as expected.
+  <Step title="Test your rule">
+    Now, after creating the rule, empty your cart first. Then, add a new product to the cart and proceed to checkout to test if the rule is working as expected.
+  </Step>
+</Steps>
 
 ### Date
 
