--- a/guides/essentials/condition-sets/condition-set-2.mdx
+++ b/guides/essentials/condition-sets/condition-set-2.mdx
@@ -223,9 +223,19 @@ This condition checks the **attributes attached to the cart** against specific c
 
 To set these conditions:
 
-1. Enter the **attribute key** in the “Enter key” field.
-2. Enter the **value(s)** to match (where applicable).
-3. Choose the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter attribute key">
+    Enter the <strong>attribute key</strong> in the “Enter key” field.
+  </Step>
+
+  <Step title="Enter value(s)">
+    Enter the <strong>value(s)</strong> to match (where applicable).
+  </Step>
+
+  <Step title="Choose comparison option">
+    Choose the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 For **Has any of these values** and **Does not have any of these values**, enter one or more values into the field. Separate multiple values with commas.
 
@@ -264,9 +274,19 @@ This condition checks the **quantity of a specific product (by SKU)** in the ord
 
 To set these conditions:
 
-1. Enter the **SKU** in the “Enter SKU” field.
-2. Enter the **quantity** in the “Enter quantity” field.
-3. Select the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter SKU">
+    Enter the <strong>SKU</strong> in the “Enter SKU” field.
+  </Step>
+
+  <Step title="Enter quantity">
+    Enter the <strong>quantity</strong> in the “Enter quantity” field.
+  </Step>
+
+  <Step title="Select comparison option">
+    Select the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 > **Example for “quantity is greater than or equals”**:  
 > SKU: `ABC123`  
@@ -299,9 +319,19 @@ This condition checks the **total quantity of all products in the order except a
 
 To set these conditions:
 
-1. Enter the **SKU** to exclude in the “Enter SKU” field.
-2. Enter the **quantity** in the “Enter quantity” field.
-3. Select the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter SKU to exclude">
+    Enter the <strong>SKU</strong> to exclude in the “Enter SKU” field.
+  </Step>
+
+  <Step title="Enter quantity">
+    Enter the <strong>quantity</strong> in the “Enter quantity” field.
+  </Step>
+
+  <Step title="Select comparison option">
+    Select the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 > **Example for “quantity is greater than or equals”**:  
 > SKU: `ABC123`  
@@ -425,9 +455,19 @@ This condition checks the **properties attached to a line item** against specifi
 
 To set these conditions:
 
-1. Enter the **property key** in the “Enter key” field.
-2. Enter the **value(s)** to match (where applicable).
-3. Choose the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter property key">
+    Enter the <strong>property key</strong> in the “Enter key” field.
+  </Step>
+
+  <Step title="Enter value(s)">
+    Enter the <strong>value(s)</strong> to match (where applicable).
+  </Step>
+
+  <Step title="Choose comparison option">
+    Choose the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 For **Has any of these values** and **Does not have any of these values**, enter one or more values into the field. Separate multiple values with commas.
 
@@ -1306,9 +1346,19 @@ This condition compares the **product quantity of one SKU** with the **product q
 
 To set these conditions:
 
-1. Enter the **SKU code** for the first product in the **Enter SKU1** field.
-2. Enter the **SKU code** for the second product in the **Enter SKU2** field.
-3. Choose the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter SKU for first product">
+    Enter the <strong>SKU code</strong> for the first product in the <strong>Enter SKU1</strong> field.
+  </Step>
+
+  <Step title="Enter SKU for second product">
+    Enter the <strong>SKU code</strong> for the second product in the <strong>Enter SKU2</strong> field.
+  </Step>
+
+  <Step title="Choose comparison option">
+    Choose the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 > **Example for “has quantity which is greater than or equals to”**:  
 > SKU1: `SKU-ABC`  
