--- a/guides/essentials/condition-sets/condition-set-3.mdx
+++ b/guides/essentials/condition-sets/condition-set-3.mdx
@@ -239,9 +239,19 @@ This condition checks the **subtotal amount of products with a specific product 
 
 To set these conditions:
 
-1. Enter the **product tag** in the “Enter product tag” field.
-2. Enter the **amount** in the “Enter amount” field.
-3. Select the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter product tag">
+    Enter the <strong>product tag</strong> in the “Enter product tag” field.
+  </Step>
+
+  <Step title="Enter amount">
+    Enter the <strong>amount</strong> in the “Enter amount” field.
+  </Step>
+
+  <Step title="Select comparison option">
+    Select the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 <Note>
   Enter the amount in your store currency. Settings > Store Details > Store
@@ -267,9 +277,19 @@ This condition checks the **order’s subtotal amount minus the subtotal amount 
 
 To set these conditions:
 
-1. Enter the **product tag** in the “Enter product tag” field.
-2. Enter the **amount** in the “Enter amount” field.
-3. Select the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter product tag">
+    Enter the <strong>product tag</strong> in the “Enter product tag” field.
+  </Step>
+
+  <Step title="Enter amount">
+    Enter the <strong>amount</strong> in the “Enter amount” field.
+  </Step>
+
+  <Step title="Select comparison option">
+    Select the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 <Note>
   Enter the amount in your store currency. Settings > Store Details > Store
@@ -297,9 +317,19 @@ This condition checks the **quantity of products with a specific product tag** i
 
 To set these conditions:
 
-1. Enter the **product tag** in the “Enter product tag” field.
-2. Enter the **quantity** in the “Enter quantity” field.
-3. Select the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter product tag">
+    Enter the <strong>product tag</strong> in the “Enter product tag” field.
+  </Step>
+
+  <Step title="Enter quantity">
+    Enter the <strong>quantity</strong> in the “Enter quantity” field.
+  </Step>
+
+  <Step title="Select comparison option">
+    Select the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 > **Example for “quantity is greater than or equals”**:  
 > Product Tag: `SummerCollection`  
