--- a/guides/essentials/condition-sets/condition-set-4.mdx
+++ b/guides/essentials/condition-sets/condition-set-4.mdx
@@ -296,9 +296,19 @@ This condition checks the **subtotal amount of products with a specific SKU** in
 
 To set these conditions:
 
-1. Enter the **SKU** in the “Enter SKU” field.
-2. Enter the **amount** in the “Enter amount” field.
-3. Select the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter SKU">
+    Enter the <strong>SKU</strong> in the “Enter SKU” field.
+  </Step>
+
+  <Step title="Enter amount">
+    Enter the <strong>amount</strong> in the “Enter amount” field.
+  </Step>
+
+  <Step title="Select comparison option">
+    Select the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 <Note>
   Enter the amount in your store currency. Settings > Store Details > Store
@@ -324,9 +334,19 @@ This condition checks the **subtotal amount of products with a specific product 
 
 To set these conditions:
 
-1. Enter the **product tag** in the “Enter product tag” field.
-2. Enter the **amount** in the “Enter amount” field.
-3. Select the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter product tag">
+    Enter the <strong>product tag</strong> in the “Enter product tag” field.
+  </Step>
+
+  <Step title="Enter amount">
+    Enter the <strong>amount</strong> in the “Enter amount” field.
+  </Step>
+
+  <Step title="Select comparison option">
+    Select the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 <Note>
   Enter the amount in your store currency. Settings > Store Details > Store
@@ -352,9 +372,19 @@ This condition checks the **order’s subtotal amount minus the subtotal amount 
 
 To set these conditions:
 
-1. Enter the **product tag** in the “Enter product tag” field.
-2. Enter the **amount** in the “Enter amount” field.
-3. Select the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter product tag">
+    Enter the <strong>product tag</strong> in the “Enter product tag” field.
+  </Step>
+
+  <Step title="Enter amount">
+    Enter the <strong>amount</strong> in the “Enter amount” field.
+  </Step>
+
+  <Step title="Select comparison option">
+    Select the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 <Note>
   Enter the amount in your store currency. Settings > Store Details > Store
@@ -465,7 +495,7 @@ For **Has any of these values**, **Does not have any of these values**, **Has an
   SKU12, sku-new-1 etc.
 </Note>
 > For example, `Has any of these values: SKU1, SKU2` → Matches if the SKU is either
-“SKU1” or “SKU2”.{" "}
+“SKU1” or “SKU2”.
 
 <img src="/images/essentials/condition-sets/skus.webp" alt="SKUs" />
 
