--- a/guides/essentials/condition-sets/condition-set-6.mdx
+++ b/guides/essentials/condition-sets/condition-set-6.mdx
@@ -437,9 +437,19 @@ This condition checks the **properties attached to a line item** against specifi
 
 To set these conditions:
 
-1. Enter the **property key** in the “Enter key” field.
-2. Enter the **value(s)** to match (where applicable).
-3. Choose the comparison option from the dropdown.
+<Steps>
+  <Step title="Enter property key">
+    Enter the <strong>property key</strong> in the “Enter key” field.
+  </Step>
+
+  <Step title="Enter value(s)">
+    Enter the <strong>value(s)</strong> to match (where applicable).
+  </Step>
+
+  <Step title="Choose comparison option">
+    Choose the comparison option from the dropdown.
+  </Step>
+</Steps>
 
 For **Has any of these values** and **Does not have any of these values**, enter one or more values into the field. Separate multiple values with commas.
 
