Add reusable snippet example for condition set fixes #20

--- a/guides/en/essentials/condition-sets/condition-set-1.mdx
+++ b/guides/en/essentials/condition-sets/condition-set-1.mdx
@@ -4,11 +4,10 @@ description: "Learn about each condition available inside _Condition Set 1_."
 icon: "sliders"
 ---
 
-## Always
+import AlwaysCondition from "/snippets/condition-set/always-condition.mdx";
+import { translations } from "/snippets/condition-set/translations.mdx";
 
-If you don’t want to set any condition, select _Always_. The rule will run every time for everyone, without checking any conditions.
-
-<img src="/images/essentials/condition-sets/always.webp" alt="Always" />
+<AlwaysCondition lang="en" translations={translations} />
 
 ## Previous all conditions invalid
 
